# bazel-nuxt

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  backpack.config.js  nuxt.config.js  package.json
server/: index.bak.js  index.js
