load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "npm_package_bin")
load("@npm//nuxt:index.bzl", "nuxt")

filegroup(
    name = "nuxt-srcs",
    srcs =
        ["nuxt.config.js"] +
        glob(
            [
                "assets/**",
                "components/**/*.vue",
                "layouts/*.vue",
                "middleware/*.js",
                "pages/**/*.vue",
                "plugins/*.js",
                "static/*",
                "store/*.js",
            ],
            # specifically exclude test files
            exclude = [
            ],
        ),
)

filegroup(
    name = "package_json",
    srcs = ["package.json"],
)

# TEST 1
## generate the dist/ directory
nuxt(
    name = "nuxt_dist",
    outs = [
        ".nuxt",
        "dist",
    ],
    args = [
        "generate",
    ],
    data = [
        ":nuxt-srcs",
        ":package_json",
        "@npm//:node_modules",
    ],
    # output_dir = True,
)

## run in production mode the generated directory
nodejs_binary(
    name = "nuxt",
    args = [
        "start",
    ],
    data = [
        ":nuxt_dist",
        "@npm//:node_modules",
    ],
    entry_point = "@npm//:node_modules/nuxt/bin/nuxt.js",
)

# TEST 2 (not working either)
# nodejs_binary(
#     name = "nuxt",
#     data = [
#         "@npm//:node_modules",
#     ],
#     entry_point = "@npm//:node_modules/nuxt/bin/nuxt.js",
# )

# npm_package_bin(
#     name = "build",
#     args = [
#         "generate",
#     ],
#     data = [
#         ":nuxt-srcs",
#         ":package_json",
#         "@npm//:node_modules",
#     ],
#     output_dir = True,
#     tool = ":nuxt",
#     #outs = ["dist"],
# )
