load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "npm_package_bin")
load("@npm//nuxt:index.bzl", "nuxt")

filegroup(
    name = "nuxt-srcs",
    srcs =
        ["nuxt.config.js"] +
        glob(
            [
                "assets/**",
                "components/**/*.vue",
                "layouts/*.vue",
                "middleware/*.js",
                "pages/**/*.vue",
                "plugins/*.js",
                "static/*",
                "store/*.js",
            ],
            # specifically exclude test files
            exclude = [
            ],
        ),
)

filegroup(
    name = "package_json",
    srcs = ["package.json"],
)

# Build nuxt.js for production
nuxt(
    name = ".nuxt",
    args = [
        "generate",
        "--buildDir=$@",
    ],
    data = [
        ":nuxt-srcs",
        ":package_json",
        "@npm//:node_modules",
    ],
    output_dir = True,
)

## run in production mode the generated directory
nuxt(
    name = "nuxt_start",
    args = [
        "start",
    ],
    data = [
        ":.nuxt",
        "@npm//:node_modules",
    ],
)
